--- a/index.html
+++ b/index.html
@@ -638,40 +638,6 @@
       </div>
     </section>
 
-    <!-- MOST POPULAR SERVICES -->
-    <section class="max-w-6xl mx-auto p-4">
-      <h2 class="text-xl font-bold mb-4">Most Popular Services in Dubai</h2>
-
-      <div class="flex items-center">
-        <!-- Slider -->
-        <div
-          id="popSlider"
-          class="flex overflow-x-auto gap-4 no-scrollbar scroll-smooth"
-        >
-          <div class="min-w-[180px]">
-            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
-            <p class="mt-2 text-center">Local Moving</p>
-          </div>
-          <div class="min-w-[180px]">
-            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
-            <p class="mt-2 text-center">Home Cleaning</p>
-          </div>
-          <div class="min-w-[180px]">
-            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
-            <p class="mt-2 text-center">Women's Salon</p>
-          </div>
-          <div class="min-w-[180px]">
-            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
-            <p class="mt-2 text-center">Spa At Home</p>
-          </div>
-          <div class="min-w-[180px]">
-            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
-            <p class="mt-2 text-center">Laundry</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <section class="max-w-6xl mx-auto p-3">
       <div
         class="bg-red-600 text-white rounded-md px-4 py-2 flex items-center justify-between shadow"
@@ -691,59 +657,323 @@
       </div>
     </section>
 
-    <!-- CLEANING SECTION -->
+    <!-- MAIN CATEGORY: RESIDENTIAL SERVICES -->
     <section class="max-w-6xl mx-auto p-4">
-      <h2 class="text-xl font-bold mb-4">Cleaning Services</h2>
+      <h2 class="text-xl font-bold mb-4">Residential Services</h2>
 
       <div class="flex items-center">
-        <div
-          id="cleanSlider"
-          class="flex overflow-x-auto gap-4 no-scrollbar scroll-smooth"
-        >
+        <div class="flex overflow-x-auto gap-4 no-scrollbar scroll-smooth">
+          <!-- Plumbing -->
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Plumbing</p>
+          </div>
+
+          <!-- Electrical -->
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Electrical</p>
+          </div>
+
+          <!-- AC Repair -->
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">AC/Heater Repair</p>
+          </div>
+
+          <!-- Home Cleaning -->
           <div class="min-w-[180px]">
             <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
             <p class="mt-2 text-center">Home Cleaning</p>
           </div>
+
+          <!-- Carpentry -->
           <div class="min-w-[180px]">
             <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
-            <p class="mt-2 text-center">Deep Cleaning</p>
+            <p class="mt-2 text-center">Carpentry</p>
           </div>
+
+          <!-- Painting -->
           <div class="min-w-[180px]">
             <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
-            <p class="mt-2 text-center">Sofa Cleaning</p>
+            <p class="mt-2 text-center">Painting</p>
           </div>
+
+          <!-- Appliance Installation -->
           <div class="min-w-[180px]">
             <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
-            <p class="mt-2 text-center">Mattress Cleaning</p>
+            <p class="mt-2 text-center">Appliance Installation</p>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- BEAUTY & WELLNESS -->
+    <!-- MAIN CATEGORY: COMMERCIAL SERVICES -->
     <section class="max-w-6xl mx-auto p-4">
-      <h2 class="text-xl font-bold mb-4">Beauty & Wellness</h2>
+      <h2 class="text-xl font-bold mb-4">Commercial Services</h2>
 
       <div class="flex items-center">
-        <div
-          id="beautySlider"
-          class="flex overflow-x-auto gap-4 no-scrollbar scroll-smooth"
-        >
+        <div class="flex overflow-x-auto gap-4 no-scrollbar scroll-smooth">
           <div class="min-w-[180px]">
             <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
-            <p class="mt-2 text-center">Salon at Home</p>
+            <p class="mt-2 text-center">Office AC & Ventilation</p>
           </div>
+
           <div class="min-w-[180px]">
             <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
-            <p class="mt-2 text-center">Spa at Home</p>
+            <p class="mt-2 text-center">Office Cleaning</p>
           </div>
+
           <div class="min-w-[180px]">
             <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
-            <p class="mt-2 text-center">Makeup</p>
+            <p class="mt-2 text-center">Electrical Maintenance</p>
           </div>
+
           <div class="min-w-[180px]">
             <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
-            <p class="mt-2 text-center">Facial</p>
+            <p class="mt-2 text-center">Cabling & Networking</p>
+          </div>
+
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Facility Management</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- MAIN CATEGORY: SMALL JOBS / QUICK FIX -->
+    <section class="max-w-6xl mx-auto p-4">
+      <h2 class="text-xl font-bold mb-4">Small Jobs / Quick Fix</h2>
+
+      <div class="flex items-center">
+        <div class="flex overflow-x-auto gap-4 no-scrollbar scroll-smooth">
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Fan Repair</p>
+          </div>
+
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Light Fitting</p>
+          </div>
+
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Minor Plumbing</p>
+          </div>
+
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Door/Lock Fix</p>
+          </div>
+
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">TV/Machine Installation</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- MAIN CATEGORY: CLEANING & SANITATION -->
+    <section class="max-w-6xl mx-auto p-4">
+      <h2 class="text-xl font-bold mb-4">Cleaning & Sanitation</h2>
+
+      <div class="flex items-center">
+        <div class="flex overflow-x-auto gap-4 no-scrollbar scroll-smooth">
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Regular Cleaning</p>
+          </div>
+
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Deep Cleaning</p>
+          </div>
+
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Disinfection</p>
+          </div>
+
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Pest Control</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- MAIN CATEGORY: INDUSTRIAL & PROJECTS -->
+    <section class="max-w-6xl mx-auto p-4">
+      <h2 class="text-xl font-bold mb-4">Industrial & Projects</h2>
+
+      <div class="flex items-center">
+        <div class="flex overflow-x-auto gap-4 no-scrollbar scroll-smooth">
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Machine Maintenance</p>
+          </div>
+
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Plant Installation</p>
+          </div>
+
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Industrial Wiring</p>
+          </div>
+
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Heavy Equipment Repair</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- MAIN CATEGORY: CONSTRUCTION & RENOVATION -->
+    <section class="max-w-6xl mx-auto p-4">
+      <h2 class="text-xl font-bold mb-4">Construction & Renovation</h2>
+
+      <div class="flex items-center">
+        <div class="flex overflow-x-auto gap-4 no-scrollbar scroll-smooth">
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">New Build</p>
+          </div>
+
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Interior Fit-out</p>
+          </div>
+
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Flooring</p>
+          </div>
+
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Roofing</p>
+          </div>
+
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Structural Repair</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- MAIN CATEGORY: EVENT MANAGEMENT -->
+    <section class="max-w-6xl mx-auto p-4">
+      <h2 class="text-xl font-bold mb-4">Event Management</h2>
+
+      <div class="flex items-center">
+        <div class="flex overflow-x-auto gap-4 no-scrollbar scroll-smooth">
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Event Planning</p>
+          </div>
+
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Stage Setup</p>
+          </div>
+
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Sound & Lighting</p>
+          </div>
+
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Decoration</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- MAIN CATEGORY: SPECIALIST SERVICES -->
+    <section class="max-w-6xl mx-auto p-4">
+      <h2 class="text-xl font-bold mb-4">Specialist Services</h2>
+
+      <div class="flex items-center">
+        <div class="flex overflow-x-auto gap-4 no-scrollbar scroll-smooth">
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Solar Installation</p>
+          </div>
+
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Security Systems</p>
+          </div>
+
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Elevator Maintenance</p>
+          </div>
+
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">HVAC Design</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- MAIN CATEGORY: LOGISTICS & DELIVERY -->
+    <section class="max-w-6xl mx-auto p-4">
+      <h2 class="text-xl font-bold mb-4">Logistics & Delivery</h2>
+
+      <div class="flex items-center">
+        <div class="flex overflow-x-auto gap-4 no-scrollbar scroll-smooth">
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Same-day Delivery</p>
+          </div>
+
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Equipment Transport</p>
+          </div>
+
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Material Supply</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- MAIN CATEGORY: CONSULTANCY & PACKAGES -->
+    <section class="max-w-6xl mx-auto p-4">
+      <h2 class="text-xl font-bold mb-4">Consultancy & Packages</h2>
+
+      <div class="flex items-center">
+        <div class="flex overflow-x-auto gap-4 no-scrollbar scroll-smooth">
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Project Consultation</p>
+          </div>
+
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Quotation Services</p>
+          </div>
+
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Maintenance Contracts</p>
+          </div>
+
+          <div class="min-w-[180px]">
+            <img src="/mnt/data/nn.PNG" class="w-full h-28 rounded-xl shadow" />
+            <p class="mt-2 text-center">Monthly Packages</p>
           </div>
         </div>
       </div>
