--- a/index.html
+++ b/index.html
@@ -119,16 +119,12 @@
       </div>
     </header>
 
-    <!-- Header (Visible on mobile + tablet, hidden on PC) -->
     <div
       class="flex items-center justify-between p-3 bg-white border-b border-gray-200 lg:hidden sticky top-0 z-50"
     >
-      <!-- Logo -->
       <div class="text-2xl font-bold text-blue-500">zoom</div>
 
-      <!-- Right Side: Services + Menu -->
       <div class="flex items-center gap-4">
-        <!-- Services Button (opens full-screen sidebar) -->
         <button
           onclick="toggleMenu()"
           class="bg-blue-50 text-black px-3 py-1.5 rounded-lg text-sm flex items-center gap-1"
@@ -149,89 +145,264 @@
           </svg>
         </button>
 
-        <!-- Menu Icon -->
-        <div class="text-xl cursor-pointer" onclick="openMobileMenu()">
+        <div
+          class="text-xl cursor-pointer text-gray-700"
+          onclick="openMobileMenu()"
+        >
           &#9776;
         </div>
       </div>
 
-      <!-- Full-Screen Mobile Menu -->
       <div
         id="mobile-menu"
-        class="hidden fixed inset-0 bg-white z-50 flex flex-col overflow-hidden"
+        class="hidden fixed inset-0 bg-[#F8F9FB] z-50 flex flex-col overflow-y-auto"
       >
-        <!-- Header with Close Button -->
         <div
-          class="flex items-center justify-between p-4 border-b bg-gray-100 sticky top-0 z-10"
+          class="flex items-center justify-between p-4 bg-white sticky top-0 z-10 border-b border-gray-100"
         >
-          <span class="text-lg font-bold">Menu</span>
+          <div class="flex-1 text-center">
+            <span
+              class="text-[14px] font-bold text-gray-700 tracking-wider uppercase"
+              >My Account</span
+            >
+          </div>
           <button
-            class="text-2xl font-bold text-gray-600 hover:text-black"
+            class="text-xl font-light text-gray-400 absolute right-4"
             onclick="closeMobileMenu()"
           >
             ✕
           </button>
         </div>
 
-        <!-- Navigation Links -->
-        <div
-          class="flex-1 flex flex-col p-6 space-y-4 text-lg font-medium overflow-y-auto"
-        >
-          <a href="index.html" class="hover:text-blue-500">Home</a>
-          <a href="about.html" class="hover:text-blue-500">About</a>
-          <a href="#" onclick="toggleMenu()" class="hover:text-blue-500"
-            >Services</a
+        <div class="max-w-md mx-auto w-full pb-10">
+          <div
+            class="mx-4 mt-4 p-4 bg-white rounded-xl shadow-sm border border-gray-100 flex items-center gap-4"
           >
-          <a href="contact.html" class="hover:text-blue-500">Contact</a>
-        </div>
-
-        <!-- Bottom Buttons -->
-        <div class="p-6 border-t bg-gray-50 flex flex-col gap-3">
-          <!-- Store Button -->
-          <a
-            href="store.html"
-            class="w-full flex items-center justify-center gap-2 bg-blue-500 text-white py-3 rounded-lg font-semibold hover:bg-blue-600 transition"
-          >
-            <!-- Store Icon -->
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="w-5 h-5"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke="currentColor"
+            <div
+              class="w-16 h-16 rounded-full overflow-hidden border-2 border-orange-500 p-0.5"
             >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M3 3h18l-1 9H4L3 3zm0 0l3 12a4 4 0 008 0l3-12"
+              <img
+                src="https://ui-avatars.com/api/?name=Guest&background=E5E7EB&color=4B5563"
+                alt="User"
+                class="w-full h-full rounded-full object-cover"
               />
-            </svg>
-            Store
-          </a>
+            </div>
+            <div>
+              <h2 class="text-lg font-bold text-[#2A8B9D] leading-tight">
+                Guest
+              </h2>
+              <p class="text-[11px] text-gray-400 uppercase tracking-tighter">
+                Dubai, UAE
+              </p>
+            </div>
+          </div>
 
-          <!-- Order Button -->
-          <a
-            href="order.html"
-            class="w-full flex items-center justify-center gap-2 bg-green-500 text-white py-3 rounded-lg font-semibold hover:bg-green-600 transition"
+          <div
+            class="mx-4 mt-5 bg-white rounded-xl shadow-sm border border-gray-100 overflow-hidden"
           >
-            <!-- Order Icon -->
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="w-5 h-5"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke="currentColor"
+            <a
+              href="#"
+              class="flex items-center justify-between p-4 border-b border-gray-50 hover:bg-gray-50 transition"
             >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M20 13V7a2 2 0 00-2-2h-3V3H9v2H6a2 2 0 00-2 2v6m16 0a9 9 0 11-18 0m18 0H2"
-              />
-            </svg>
-            Your Order
-          </a>
+              <div class="flex items-center gap-4">
+                <i
+                  class="fa-solid fa-user-pen text-gray-500 w-5 text-center"
+                ></i>
+                <span class="text-[14px] font-medium text-gray-700"
+                  >Edit profile</span
+                >
+              </div>
+              <i
+                class="fa-solid fa-chevron-right text-gray-300 text-[10px]"
+              ></i>
+            </a>
+            <a
+              href="#"
+              class="flex items-center justify-between p-4 border-b border-gray-50 hover:bg-gray-50 transition"
+            >
+              <div class="flex items-center gap-4">
+                <i
+                  class="fa-solid fa-credit-card text-gray-500 w-5 text-center"
+                ></i>
+                <span class="text-[14px] font-medium text-gray-700"
+                  >Payment methods</span
+                >
+              </div>
+              <i
+                class="fa-solid fa-chevron-right text-gray-300 text-[10px]"
+              ></i>
+            </a>
+            <a
+              href="#"
+              class="flex items-center justify-between p-4 border-b border-gray-50 hover:bg-gray-50 transition"
+            >
+              <div class="flex items-center gap-4">
+                <i class="fa-solid fa-wallet text-gray-500 w-5 text-center"></i>
+                <span class="text-[14px] font-medium text-gray-700"
+                  >Wallet</span
+                >
+              </div>
+              <div class="flex items-center gap-2">
+                <span class="text-orange-500 font-bold text-xs">🪙 0</span>
+                <i
+                  class="fa-solid fa-chevron-right text-gray-300 text-[10px]"
+                ></i>
+              </div>
+            </a>
+            <a
+              href="#"
+              class="flex items-center justify-between p-4 border-b border-gray-50 hover:bg-gray-50 transition"
+            >
+              <div class="flex items-center gap-4">
+                <i
+                  class="fa-solid fa-receipt text-gray-500 w-5 text-center"
+                ></i>
+                <span class="text-[14px] font-medium text-gray-700"
+                  >Outstanding Payment</span
+                >
+              </div>
+              <i
+                class="fa-solid fa-chevron-right text-gray-300 text-[10px]"
+              ></i>
+            </a>
+            <a
+              href="#"
+              class="flex items-center justify-between p-4 border-b border-gray-50 hover:bg-gray-50 transition"
+            >
+              <div class="flex items-center gap-4">
+                <i
+                  class="fa-solid fa-location-dot text-gray-500 w-5 text-center"
+                ></i>
+                <span class="text-[14px] font-medium text-gray-700"
+                  >Saved locations</span
+                >
+              </div>
+              <i
+                class="fa-solid fa-chevron-right text-gray-300 text-[10px]"
+              ></i>
+            </a>
+            <a
+              href="#"
+              class="flex items-center justify-between p-4 border-b border-gray-50 hover:bg-gray-50 transition"
+            >
+              <div class="flex items-center gap-4">
+                <i class="fa-solid fa-bell text-gray-500 w-5 text-center"></i>
+                <span class="text-[14px] font-medium text-gray-700"
+                  >Notifications</span
+                >
+              </div>
+              <i
+                class="fa-solid fa-chevron-right text-gray-300 text-[10px]"
+              ></i>
+            </a>
+            <a
+              href="#"
+              class="flex items-center justify-between p-4 hover:bg-gray-50 transition"
+            >
+              <div class="flex items-center gap-4">
+                <i
+                  class="fa-solid fa-life-ring text-gray-500 w-5 text-center"
+                ></i>
+                <span class="text-[14px] font-medium text-gray-700"
+                  >Support</span
+                >
+              </div>
+              <i
+                class="fa-solid fa-chevron-right text-gray-300 text-[10px]"
+              ></i>
+            </a>
+          </div>
+
+          <div
+            class="mx-4 mt-5 bg-white rounded-xl shadow-sm border border-gray-100 overflow-hidden"
+          >
+            <a
+              href="#"
+              class="flex items-center justify-between p-4 border-b border-gray-50 hover:bg-gray-50 transition"
+            >
+              <div class="flex items-center gap-4">
+                <i
+                  class="fa-solid fa-file-lines text-gray-500 w-5 text-center"
+                ></i>
+                <span class="text-[14px] font-medium text-gray-700"
+                  >Terms & Conditions</span
+                >
+              </div>
+              <i
+                class="fa-solid fa-chevron-right text-gray-300 text-[10px]"
+              ></i>
+            </a>
+            <a
+              href="#"
+              class="flex items-center justify-between p-4 border-b border-gray-50 hover:bg-gray-50 transition"
+            >
+              <div class="flex items-center gap-4">
+                <i
+                  class="fa-solid fa-money-bill-transfer text-gray-500 w-5 text-center"
+                ></i>
+                <span class="text-[14px] font-medium text-gray-700"
+                  >Payment and refund policy</span
+                >
+              </div>
+              <i
+                class="fa-solid fa-chevron-right text-gray-300 text-[10px]"
+              ></i>
+            </a>
+            <a
+              href="#"
+              class="flex items-center justify-between p-4 hover:bg-gray-50 transition"
+            >
+              <div class="flex items-center gap-4">
+                <i
+                  class="fa-solid fa-shield-halved text-gray-500 w-5 text-center"
+                ></i>
+                <span class="text-[14px] font-medium text-gray-700"
+                  >Privacy Policy</span
+                >
+              </div>
+              <i
+                class="fa-solid fa-chevron-right text-gray-300 text-[10px]"
+              ></i>
+            </a>
+          </div>
+
+          <div
+            class="mx-4 mt-5 bg-white rounded-xl shadow-sm border border-gray-100 overflow-hidden"
+          >
+            <a
+              href="#"
+              class="flex items-center justify-between p-4 border-b border-gray-50 hover:bg-gray-50 transition"
+            >
+              <div class="flex items-center gap-4">
+                <i
+                  class="fa-regular fa-heart text-gray-500 w-5 text-center"
+                ></i>
+                <span class="text-[14px] font-medium text-gray-700"
+                  >Review the app</span
+                >
+              </div>
+              <i
+                class="fa-solid fa-chevron-right text-gray-300 text-[10px]"
+              ></i>
+            </a>
+            <a
+              href="#"
+              onclick="closeMobileMenu()"
+              class="flex items-center justify-between p-4 hover:bg-gray-50 transition"
+            >
+              <div class="flex items-center gap-4">
+                <i
+                  class="fa-solid fa-arrow-right-from-bracket text-gray-500 w-5 text-center"
+                ></i>
+                <span class="text-[14px] font-medium text-gray-700"
+                  >Sign out</span
+                >
+              </div>
+              <i
+                class="fa-solid fa-chevron-right text-gray-300 text-[10px]"
+              ></i>
+            </a>
+          </div>
         </div>
       </div>
     </div>
