--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
     <title>VoltFix - Book a Certified Electrician</title>
 
     <!-- ফেভিকন যুক্ত করা হয়েছে নিচের লাইনে -->
@@ -1485,3 +1489,4 @@
     </footer>
   </body>
 </html>
+
