--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@
       </div>
     </header>
 
+    <!-- Mobile Menu -->
     <div
-      class="flex items-center justify-between p-3 bg-white border-b border-gray-200 lg:hidden sticky top-0 z-50"
+      class="flex items-center justify-between p-3 bg-white border-b border-gray-300 lg:hidden sticky top-0 z-50"
     >
       <div class="text-2xl font-bold text-blue-500">zoom</div>
 
@@ -162,7 +163,7 @@
         class="hidden fixed inset-0 bg-[#F8F9FB] z-50 flex flex-col overflow-y-auto"
       >
         <div
-          class="flex items-center justify-between p-4 bg-white sticky top-0 z-10 border-b border-gray-100"
+          class="flex items-center justify-between p-4 bg-white sticky top-0 z-10 border-b border-gray-300"
         >
           <div class="flex-1 text-center">
             <span
@@ -180,7 +181,7 @@
 
         <div class="max-w-md mx-auto w-full pb-10">
           <div
-            class="mx-4 mt-4 p-4 bg-white rounded-xl shadow-sm border border-gray-100 flex items-center gap-4"
+            class="mx-4 mt-4 p-4 bg-white rounded-xl shadow-sm border border-gray-300 flex items-center gap-4"
           >
             <div
               class="w-16 h-16 rounded-full overflow-hidden border-2 border-orange-500 p-0.5"
@@ -195,22 +196,22 @@
               <h2 class="text-lg font-bold text-[#2A8B9D] leading-tight">
                 Guest
               </h2>
-              <p class="text-[11px] text-gray-400 uppercase tracking-tighter">
+              <p class="text-[11px] text-gray-500 uppercase tracking-tighter">
                 Dubai, UAE
               </p>
             </div>
           </div>
 
           <div
-            class="mx-4 mt-5 bg-white rounded-xl shadow-sm border border-gray-100 overflow-hidden"
+            class="mx-4 mt-5 bg-white rounded-xl shadow-sm border border-gray-300 overflow-hidden"
           >
             <a
               href="#"
-              class="flex items-center justify-between p-4 border-b border-gray-50 hover:bg-gray-50 transition"
+              class="flex items-center justify-between p-4 border-b border-gray-200 hover:bg-gray-50 transition"
             >
               <div class="flex items-center gap-4">
                 <i
-                  class="fa-solid fa-user-pen text-gray-500 w-5 text-center"
+                  class="fa-solid fa-user-pen text-gray-600 w-5 text-center"
                 ></i>
                 <span class="text-[14px] font-medium text-gray-700"
                   >Edit profile</span
@@ -222,11 +223,11 @@
             </a>
             <a
               href="#"
-              class="flex items-center justify-between p-4 border-b border-gray-50 hover:bg-gray-50 transition"
+              class="flex items-center justify-between p-4 border-b border-gray-200 hover:bg-gray-50 transition"
             >
               <div class="flex items-center gap-4">
                 <i
-                  class="fa-solid fa-credit-card text-gray-500 w-5 text-center"
+                  class="fa-solid fa-credit-card text-gray-600 w-5 text-center"
                 ></i>
                 <span class="text-[14px] font-medium text-gray-700"
                   >Payment methods</span
@@ -238,10 +239,10 @@
             </a>
             <a
               href="#"
-              class="flex items-center justify-between p-4 border-b border-gray-50 hover:bg-gray-50 transition"
+              class="flex items-center justify-between p-4 border-b border-gray-200 hover:bg-gray-50 transition"
             >
               <div class="flex items-center gap-4">
-                <i class="fa-solid fa-wallet text-gray-500 w-5 text-center"></i>
+                <i class="fa-solid fa-wallet text-gray-600 w-5 text-center"></i>
                 <span class="text-[14px] font-medium text-gray-700"
                   >Wallet</span
                 >
@@ -255,11 +256,11 @@
             </a>
             <a
               href="#"
-              class="flex items-center justify-between p-4 border-b border-gray-50 hover:bg-gray-50 transition"
+              class="flex items-center justify-between p-4 border-b border-gray-200 hover:bg-gray-50 transition"
             >
               <div class="flex items-center gap-4">
                 <i
-                  class="fa-solid fa-receipt text-gray-500 w-5 text-center"
+                  class="fa-solid fa-receipt text-gray-600 w-5 text-center"
                 ></i>
                 <span class="text-[14px] font-medium text-gray-700"
                   >Outstanding Payment</span
@@ -271,11 +272,11 @@
             </a>
             <a
               href="#"
-              class="flex items-center justify-between p-4 border-b border-gray-50 hover:bg-gray-50 transition"
+              class="flex items-center justify-between p-4 border-b border-gray-200 hover:bg-gray-50 transition"
             >
               <div class="flex items-center gap-4">
                 <i
-                  class="fa-solid fa-location-dot text-gray-500 w-5 text-center"
+                  class="fa-solid fa-location-dot text-gray-600 w-5 text-center"
                 ></i>
                 <span class="text-[14px] font-medium text-gray-700"
                   >Saved locations</span
@@ -287,10 +288,10 @@
             </a>
             <a
               href="#"
-              class="flex items-center justify-between p-4 border-b border-gray-50 hover:bg-gray-50 transition"
+              class="flex items-center justify-between p-4 border-b border-gray-200 hover:bg-gray-50 transition"
             >
               <div class="flex items-center gap-4">
-                <i class="fa-solid fa-bell text-gray-500 w-5 text-center"></i>
+                <i class="fa-solid fa-bell text-gray-600 w-5 text-center"></i>
                 <span class="text-[14px] font-medium text-gray-700"
                   >Notifications</span
                 >
@@ -305,7 +306,7 @@
             >
               <div class="flex items-center gap-4">
                 <i
-                  class="fa-solid fa-life-ring text-gray-500 w-5 text-center"
+                  class="fa-solid fa-life-ring text-gray-600 w-5 text-center"
                 ></i>
                 <span class="text-[14px] font-medium text-gray-700"
                   >Support</span
@@ -318,15 +319,15 @@
           </div>
 
           <div
-            class="mx-4 mt-5 bg-white rounded-xl shadow-sm border border-gray-100 overflow-hidden"
+            class="mx-4 mt-5 bg-white rounded-xl shadow-sm border border-gray-300 overflow-hidden"
           >
             <a
               href="#"
-              class="flex items-center justify-between p-4 border-b border-gray-50 hover:bg-gray-50 transition"
+              class="flex items-center justify-between p-4 border-b border-gray-200 hover:bg-gray-50 transition"
             >
               <div class="flex items-center gap-4">
                 <i
-                  class="fa-solid fa-file-lines text-gray-500 w-5 text-center"
+                  class="fa-solid fa-file-lines text-gray-600 w-5 text-center"
                 ></i>
                 <span class="text-[14px] font-medium text-gray-700"
                   >Terms & Conditions</span
@@ -338,11 +339,11 @@
             </a>
             <a
               href="#"
-              class="flex items-center justify-between p-4 border-b border-gray-50 hover:bg-gray-50 transition"
+              class="flex items-center justify-between p-4 border-b border-gray-200 hover:bg-gray-50 transition"
             >
               <div class="flex items-center gap-4">
                 <i
-                  class="fa-solid fa-money-bill-transfer text-gray-500 w-5 text-center"
+                  class="fa-solid fa-money-bill-transfer text-gray-600 w-5 text-center"
                 ></i>
                 <span class="text-[14px] font-medium text-gray-700"
                   >Payment and refund policy</span
@@ -358,7 +359,7 @@
             >
               <div class="flex items-center gap-4">
                 <i
-                  class="fa-solid fa-shield-halved text-gray-500 w-5 text-center"
+                  class="fa-solid fa-shield-halved text-gray-600 w-5 text-center"
                 ></i>
                 <span class="text-[14px] font-medium text-gray-700"
                   >Privacy Policy</span
@@ -371,15 +372,15 @@
           </div>
 
           <div
-            class="mx-4 mt-5 bg-white rounded-xl shadow-sm border border-gray-100 overflow-hidden"
+            class="mx-4 mt-5 bg-white rounded-xl shadow-sm border border-gray-300 overflow-hidden"
           >
             <a
               href="#"
-              class="flex items-center justify-between p-4 border-b border-gray-50 hover:bg-gray-50 transition"
+              class="flex items-center justify-between p-4 border-b border-gray-200 hover:bg-gray-50 transition"
             >
               <div class="flex items-center gap-4">
                 <i
-                  class="fa-regular fa-heart text-gray-500 w-5 text-center"
+                  class="fa-regular fa-heart text-gray-600 w-5 text-center"
                 ></i>
                 <span class="text-[14px] font-medium text-gray-700"
                   >Review the app</span
@@ -396,7 +397,7 @@
             >
               <div class="flex items-center gap-4">
                 <i
-                  class="fa-solid fa-arrow-right-from-bracket text-gray-500 w-5 text-center"
+                  class="fa-solid fa-arrow-right-from-bracket text-gray-600 w-5 text-center"
                 ></i>
                 <span class="text-[14px] font-medium text-gray-700"
                   >Sign out</span
@@ -1489,4 +1490,3 @@
     </footer>
   </body>
 </html>
-
