--- a/index.html
+++ b/index.html
@@ -855,8 +855,9 @@
             class="min-w-[150px] md:min-w-[220px] transition-transform hover:scale-105"
           >
             <img
-              src="/mnt/data/nn.PNG"
+              src="https://images.unsplash.com/photo-1607472586893-edb57bdc0e39?q=80&w=500&auto=format&fit=crop"
               class="w-full h-24 md:h-40 rounded-xl md:rounded-2xl shadow-md object-cover"
+              alt="Residential Plumbing"
             />
             <p
               class="mt-3 text-sm md:text-lg text-center font-bold text-gray-700"
@@ -869,8 +870,9 @@
             class="min-w-[150px] md:min-w-[220px] transition-transform hover:scale-105"
           >
             <img
-              src="/mnt/data/nn.PNG"
+              src="https://images.unsplash.com/photo-1621905251918-48416bd8575a?q=80&w=500&auto=format&fit=crop"
               class="w-full h-24 md:h-40 rounded-xl md:rounded-2xl shadow-md object-cover"
+              alt="Home Electrical"
             />
             <p
               class="mt-3 text-sm md:text-lg text-center font-bold text-gray-700"
@@ -883,8 +885,9 @@
             class="min-w-[150px] md:min-w-[220px] transition-transform hover:scale-105"
           >
             <img
-              src="/mnt/data/nn.PNG"
+              src="https://images.unsplash.com/photo-1631889993877-157793180a0b?q=80&w=500&auto=format&fit=crop"
               class="w-full h-24 md:h-40 rounded-xl md:rounded-2xl shadow-md object-cover"
+              alt="AC Heater Repair"
             />
             <p
               class="mt-3 text-sm md:text-lg text-center font-bold text-gray-700"
@@ -897,8 +900,9 @@
             class="min-w-[150px] md:min-w-[220px] transition-transform hover:scale-105"
           >
             <img
-              src="/mnt/data/nn.PNG"
+              src="https://images.unsplash.com/photo-1527515637462-cff94eecc1ac?q=80&w=500&auto=format&fit=crop"
               class="w-full h-24 md:h-40 rounded-xl md:rounded-2xl shadow-md object-cover"
+              alt="Home Cleaning"
             />
             <p
               class="mt-3 text-sm md:text-lg text-center font-bold text-gray-700"
@@ -911,8 +915,9 @@
             class="min-w-[150px] md:min-w-[220px] transition-transform hover:scale-105"
           >
             <img
-              src="/mnt/data/nn.PNG"
+              src="https://images.unsplash.com/photo-1610557892470-55d9e80c0b62?q=80&w=500&auto=format&fit=crop"
               class="w-full h-24 md:h-40 rounded-xl md:rounded-2xl shadow-md object-cover"
+              alt="Residential Carpentry"
             />
             <p
               class="mt-3 text-sm md:text-lg text-center font-bold text-gray-700"
@@ -925,8 +930,9 @@
             class="min-w-[150px] md:min-w-[220px] transition-transform hover:scale-105"
           >
             <img
-              src="/mnt/data/nn.PNG"
+              src="https://images.unsplash.com/photo-1593019611461-2d53208d742b?q=80&w=500&auto=format&fit=crop"
               class="w-full h-24 md:h-40 rounded-xl md:rounded-2xl shadow-md object-cover"
+              alt="Home Painting"
             />
             <p
               class="mt-3 text-sm md:text-lg text-center font-bold text-gray-700"
@@ -937,6 +943,7 @@
         </div>
       </div>
     </section>
+    <!-- MAIN CATEGORY: COMMERCIAL SERVICES -->
 
     <section class="max-w-7xl mx-auto p-4">
       <div class="flex justify-between items-center mb-4">
@@ -1018,6 +1025,8 @@
       </div>
     </section>
 
+    <!-- MAIN CATEGORY: SMALL JOBS / QUICK FIX -->
+
     <section class="max-w-7xl mx-auto p-4">
       <div class="flex justify-between items-center mb-4">
         <h2 class="text-xl md:text-2xl font-bold text-gray-800">
@@ -1098,6 +1107,8 @@
       </div>
     </section>
 
+    <!-- MAIN CATEGORY: CLEANING & SANITATION -->
+
     <section class="max-w-7xl mx-auto p-4">
       <div class="flex justify-between items-center mb-4">
         <h2 class="text-xl md:text-2xl font-bold text-gray-800">
@@ -1166,6 +1177,8 @@
       </div>
     </section>
 
+    <!-- MAIN CATEGORY: INDUSTRIAL & PROJECTS -->
+
     <section class="max-w-7xl mx-auto p-4">
       <div class="flex justify-between items-center mb-4">
         <h2 class="text-xl md:text-2xl font-bold text-gray-800">
@@ -1233,6 +1246,8 @@
         </div>
       </div>
     </section>
+
+    <!-- MAIN CATEGORY: CONSTRUCTION & RENOVATION -->
 
     <section class="max-w-7xl mx-auto p-4">
       <div class="flex justify-between items-center mb-4">
@@ -1314,6 +1329,8 @@
       </div>
     </section>
 
+    <!-- MAIN CATEGORY: EVENT MANAGEMENT -->
+
     <section class="max-w-7xl mx-auto p-4">
       <div class="flex justify-between items-center mb-4">
         <h2 class="text-xl md:text-2xl font-bold text-gray-800">
@@ -1381,6 +1398,8 @@
         </div>
       </div>
     </section>
+
+    <!-- MAIN CATEGORY: SPECIALIST SERVICES -->
 
     <section class="max-w-7xl mx-auto p-4">
       <div class="flex justify-between items-center mb-4">
@@ -1450,6 +1469,8 @@
       </div>
     </section>
 
+    <!-- MAIN CATEGORY: LOGISTICS & DELIVERY -->
+
     <section class="max-w-7xl mx-auto p-4">
       <div class="flex justify-between items-center mb-4">
         <h2 class="text-xl md:text-2xl font-bold text-gray-800">
@@ -1505,6 +1526,8 @@
         </div>
       </div>
     </section>
+
+    <!-- MAIN CATEGORY: CONSTRUCTION & RENOVATION -->
 
     <section class="max-w-7xl mx-auto p-4">
       <div class="flex justify-between items-center mb-4">
