--- a/index.html
+++ b/index.html
@@ -2908,7 +2908,7 @@
               <h3
                 class="text-white font-semibold mb-3 border-b border-gray-700 pb-1 inline-block text-sm"
               >
-                Popular
+                Popular Services
               </h3>
               <ul class="space-y-2 text-xs md:text-sm">
                 <li>
